Fix Lower Description Problem
Now on the phone, there should be no white space under the logos

--- a/static/css/chatty.css
+++ b/static/css/chatty.css
@@ -41,8 +41,8 @@ body {
   margin-right: 0;
 }
 .container-custom .chatty-template .row .description {
-  padding-left: 1.2rem;
-  padding-top: 1rem;
+  padding-left: 0.3rem;
+  padding-top: 0rem;
 }
 .description .row p {
   font-size: 1.3rem;
@@ -67,11 +67,11 @@ body {
   padding-left: 0;
 }
 .time {
-  width: 70%;
+  width:90%;
   display: inline-block;
 }
 .collect {
-  width: 20%;
+  width: 0%;
   display: inline-block;
 }
 #collect {
